# wodore-backend

./: .bumpversion.cfg  .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODOS.md  check_import_logic.py  cliff.toml  docker-compose.yml  index.html  manage.py  meteoswiss_import_summary.md  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  sitemap.xml  tags.json  tailwind.config.js  watch_style.sh
.github/: dependabot.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: docker.yml  docu.yml  docu.yml.ignore  main.yml  new-version.yml  new-version.yml.ignore  publish-pypi.yml.ignore  release.yml  release.yml.ignore  test.yml
TODOS/: index.html
_work/: 240306_wep008_geoplace_extensions_amenity_import.md  260307_osm_import_fixes.md  260307_osm_import_implementation.md  260308_osm_import_performance_analysis.md  260308_parallel_import_and_diff_mode.md  260309_1m_entries_projection.md  260309_batch_optimization_analysis.md  260309_final_summary.md  260309_hybrid_bulk_upsert.md  260309_osm_import_optimizations.md  260309_performance_implementation_summary.md  260309_running_performance_tests.md  260309_slug_generation_rules.md  260310_import_optimizations.md  260310_unnamed_places_fix.md  260311_cache_ttl_documentation.md  260311_geoplace_multi_categories.md  260311_multicategory_analysis.md  260311_osm_import_error_analysis.md  260312_category_provider_readiness.md  260313_feature_graph_implementation.md  260313_geoplace_feature_graph_spec.md  260316_performance_analysis_tile_generation.md
api/: index.html
changelog/: index.html
config/: .env.template
css/: neoteroi-api-mkdocs-plugin-v1.1.3.css
docker/: docker-compose.prod.yml  docker-compose.stage.yml
docker/django/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.ubuntu  ci.sh  entrypoint.sh  get_env.sh  gunicorn.sh  gunicorn_config.py  minify_venv.sh  remove_locale.sh
docs/: TODOS.md  api.md  conf.py  docu.md  index.md  infos.md  packages.md
docs/pages/template/: linters.rst  testing.rst
docs/weps/: index.md
docs/weps/board/: WEP001_routing_service.md  WEP002_hut_access_classification.md  WEP003_public_transport_access.md  WEP004_external_source_routing.md  WEP005_hut_access_isochrones.md  WEP006_paradedb_integration.md  WEP007_weather_forecast.md  WEP008_geoplace_extensions_amenity_import.md  WEP009_poi_clustering.md
docu/: index.html
infos/: index.html
openspec/changes/fix-deprecation-warnings/: tasks.md
openspec/changes/test-seed-infrastructure/: proposal.md  tasks.md
scripts/: create_dev_database.sql  svg_to_mono.py
search/: search_index.json
server/: __init__.py  urls.py  wsgi.py
server/apps/admin/: admin.py  apps.py
server/apps/api/: api_v1.py  auth.py  client-credentials-token-generator.py  parser.py  query.py  renderer.py  schemas.py
server/apps/availability/: README.md  admin.py  api.py  apps.py  managers.py  models.py  schemas.py  services.py  utils.py
server/apps/categories/: __init__.py  admin.py  api.py  apps.py  forms.py  geonames_category_mapping.ods  managers.py  models.py  schemas.py  svgo.config.js
server/apps/contacts/: apps.py
server/apps/djjmt/: fields.py  utils.py
server/apps/external_geonames/: README.md  apps.py  utils.py
server/apps/external_links/: __init__.py  admin.py  apps.py  models.py
server/apps/feedbacks/: admin.py  api.py  apps.py  models.py  schemas.py
server/apps/geometries/: GEOPLACE_PROPOSAL.md  __init__.py  api.py  api_images.py  apps.py  forms.py  schemas.py  validators.py
server/apps/huts/: GPSConverter.py  admin.py  apps.py  apps.py.old  forms.py  models.py  widgets.py
server/apps/images/: admin.py  api.py  apps.py  forms.py  image_api.md  models.py  schema.py  transfomer.py
server/apps/licenses/: admin.py  api.py  apps.py  forms.py  models.py  schema.py
server/apps/main/: admin.py  models.py  urls.py  views.py
server/apps/manager/: admin.py  apps.py  widgets.py
server/apps/meta_image_field/: fields.py  forms.py  schema.py  widgets.py
server/apps/meteo/: admin.py  api.py  apps.py  models.py  schemas.py
server/apps/organizations/: admin.py  api.py  apps.py  forms.py  models.py  schema.py  views.py
server/apps/owners/: apps.py
server/apps/symbols/: admin.py  api.py  apps.py  forms.py  models.py  schema.py  tests.py  transfomer.py  utils.py  views.py
server/apps/translations/: __init__.py  forms.py  schema.py  translate.py
server/apps/utils/: api.py  fields.py  locale.py  query.py
server/core/: __init__.py  apps.py  email_backends.py  models.py  oicd_permission.py  utils.py
server/core/management/: __init__.py  base.py
server/core/managers/: __init__.py  base_manager.py
server/middleware/: __init__.py  headers.py
server/settings/: __init__.py
server/settings/components/: caches.py  common.py  csp.py  email.py  logging.py  oicd.py  unfold.py
server/settings/environments/: dev_production.py  development.py  local.py  production.py  staging.py  test.py
server/templates/admin/: base.html  lang_switch.html
server/templates/txt/: humans.txt
tasks/: __init__.py  _env.py  _logger.py  app.py  changelog.py  check.py  docker.py  docs.py  gen_ref_pages.py  project.py  tests.py
tests/: conftest.py  test_main.py  test_seed_infrastructure.py
tests/apps/: conftest.py
tests/factories/: __init__.py  availability.py  contacts.py  geometries.py  huts.py  owners.py
tests/load_testing/: simple_api.py
tests/manual/: test_clustering.html
tests/seed/: geoplaces.yaml  huts.yaml  loader.py
tests/test_server/: test_urls.py
tile_server/config/: martin.yaml  martin_test.yaml
tile_server/examples/: README.md  import_skiroutes.py
tile_server/styles/: huts.json
weps/: index.html
weps/tags/: index.html
weps/wep001/: index.html
weps/wep002/: index.html
weps/wep003/: index.html
weps/wep004-external-source-routing/: index.html
weps/wep005/: index.html
weps/wep006/: index.html
weps/wep007/: index.html
weps/wep008/: index.html
(+515 files in other folders)
